--- a/programa avanzada/src/Visual/GenerarServicioTecnico.form
+++ b/programa avanzada/src/Visual/GenerarServicioTecnico.form
@@ -315,6 +315,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrecioServicio">
       <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPrecioServicioKeyReleased"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPrecioServicioKeyTyped"/>
       </Events>
     </Component>
