--- a/programa avanzada/src/Visual/MenuPrincipal.form
+++ b/programa avanzada/src/Visual/MenuPrincipal.form
@@ -346,6 +346,14 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuBalanceComprasActionPerformed"/>
                   </Events>
                 </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="mnuBalanceEmpresa">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Balance Empresa"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuBalanceEmpresaActionPerformed"/>
+                  </Events>
+                </MenuItem>
               </SubComponents>
             </Menu>
           </SubComponents>
